tests/ui/async-await/clone-suggestion.stderr
error[E0382]: use of moved value: `f`
  --> $DIR/clone-suggestion.rs:24:5
   |
LL |     let f = SharedFuture;
   |         - move occurs because `f` has type `SharedFuture`, which does not implement the `Copy` trait
LL |     f.await;
   |       ----- `f` moved due to this await
LL |     f.await;
   |     ^ value used here after move
   |
note: `into_future` takes ownership of the receiver `self`, which moves `f`
  --> $SRC_DIR/core/src/future/into_future.rs:LL:COL
help: you can `clone` the value and consume it, but this might not be your desired behavior
   |
LL |     f.clone().await;
   |      ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
